@@ -17,6 +17,7 @@ PostGIS 1.1.0CVS
 
 PostGIS 1.0.3
 ????/??/??
+	- Severe bugfix in lwgeom's 2d bounding box computation
 	- Bugfix in dumper on 64bit machines
 	- Bugfix in dumper handling of user-defined queries 
 	- Bugfix in create_undef.pl script
